swagger documentation up to date with functions, working
